vite-dev.err
[2m14:39:10[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] SyntaxError: Unexpected token '<'
[2m14:39:10[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] Failed to reload /src/components/ExpenseForm.jsx. This could be due to syntax errors or importing non-existent modules. (see errors above)
[2m16:40:52[22m [31m[1m[vite][22m[39m [31mInternal server error: Failed to resolve import "./components/IncomeScreen" from "src/App.jsx". Does the file exist?[39m
  Plugin: [35mvite:import-analysis[39m
  File: [36mC:/Users/adria/fluxo-app/src/App.jsx[39m:5:29
[33m  3  |  import { DashboardScreen } from "./components/DashboardScreen";
  4  |  import { ExpenseScreen } from "./components/ExpenseScreen";
  5  |  import { IncomeScreen } from "./components/IncomeScreen";
     |                                ^
  6  |  import { Sidebar } from "./components/Sidebar";
  7  |  import { useState } from "react";[39m
      at TransformPluginContext._formatLog (file:///C:/Users/adria/fluxo-app/node_modules/vite/dist/node/chunks/node.js:30408:39)
      at TransformPluginContext.error (file:///C:/Users/adria/fluxo-app/node_modules/vite/dist/node/chunks/node.js:30405:14)
      at normalizeUrl (file:///C:/Users/adria/fluxo-app/node_modules/vite/dist/node/chunks/node.js:27662:18)
      at async file:///C:/Users/adria/fluxo-app/node_modules/vite/dist/node/chunks/node.js:27725:30
      at async Promise.all (index 4)
      at async TransformPluginContext.transform (file:///C:/Users/adria/fluxo-app/node_modules/vite/dist/node/chunks/node.js:27693:4)
      at async EnvironmentPluginContainer.transform (file:///C:/Users/adria/fluxo-app/node_modules/vite/dist/node/chunks/node.js:30193:14)
      at async loadAndTransform (file:///C:/Users/adria/fluxo-app/node_modules/vite/dist/node/chunks/node.js:24511:26)
      at async viteTransformMiddleware (file:///C:/Users/adria/fluxo-app/node_modules/vite/dist/node/chunks/node.js:24305:20)
[2m16:40:52[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m Pre-transform error: Failed to resolve import "./components/DashboardScreen" from "src/App.jsx". Does the file exist?
  Plugin: [35mvite:import-analysis[39m
  File: [36mC:/Users/adria/fluxo-app/src/App.jsx[39m:3:32
[33m  1  |  import "./App.css";
  2  |  import { CardsScreen } from "./components/CardsScreen";
  3  |  import { DashboardScreen } from "./components/DashboardScreen";
     |                                   ^
  4  |  import { ExpenseScreen } from "./components/ExpenseScreen";
  5  |  import { IncomeScreen } from "./components/IncomeScreen";[39m
[2m16:40:52[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m Pre-transform error: Failed to resolve import "./components/DashboardScreen" from "src/App.jsx". Does the file exist?
  Plugin: [35mvite:import-analysis[39m
  File: [36mC:/Users/adria/fluxo-app/src/App.jsx[39m:3:32
[33m  1  |  import "./App.css";
  2  |  import { CardsScreen } from "./components/CardsScreen";
  3  |  import { DashboardScreen } from "./components/DashboardScreen";
     |                                   ^
  4  |  import { ExpenseScreen } from "./components/ExpenseScreen";
  5  |  import { IncomeScreen } from "./components/IncomeScreen";[39m
[2m16:40:52[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m Pre-transform error: Failed to resolve import "./components/DashboardScreen" from "src/App.jsx". Does the file exist?
  Plugin: [35mvite:import-analysis[39m
  File: [36mC:/Users/adria/fluxo-app/src/App.jsx[39m:3:32
[33m  1  |  import "./App.css";
  2  |  import { CardsScreen } from "./components/CardsScreen";
  3  |  import { DashboardScreen } from "./components/DashboardScreen";
     |                                   ^
  4  |  import { ExpenseScreen } from "./components/ExpenseScreen";
  5  |  import { IncomeScreen } from "./components/IncomeScreen";[39m
[2m16:40:52[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] Failed to reload /src/App.jsx. This could be due to syntax errors or importing non-existent modules. (see errors above)
[2m16:50:09[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [31m[Unhandled error] [1mTypeError[22m: Cannot read properties of undefined (reading 'filter')
[39m > createDashboardView src/components/DashboardScreen.jsx:75:43
    73 |    const pendingMonthlyIncomes = monthlyIncomes.filter((income) => income.status !== 'received')
    74 |    const unpaidMonthlyExpenses = monthlyExpenses.filter((expense) => expense.status !== 'paid')
    75 |    const paidExpenseOutflows = transactions.filter(
       |                                             ^
    76 |      (transaction) => transaction.type === 'saida' && transaction.origin === 'despesa',
    77 |    )
 > src/components/DashboardScreen.jsx:15:34
 > updateMemo node_modules/react-dom/cjs/react-dom-client.development.js:8795:18
 > Object.useMemo node_modules/react-dom/cjs/react-dom-client.development.js:26484:17
 > exports.useMemo node_modules/react/cjs/react.development.js:1251:33
 > DashboardScreen src/components/DashboardScreen.jsx:15:20
 > Object.react_stack_bottom_frame node_modules/react-dom/cjs/react-dom-client.development.js:25904:19
 > renderWithHooks node_modules/react-dom/cjs/react-dom-client.development.js:7662:21
 > updateFunctionComponent node_modules/react-dom/cjs/react-dom-client.development.js:10166:18
 > beginWork node_modules/react-dom/cjs/react-dom-client.development.js:11778:17

[2m16:50:09[22m [33m[1m[vite][22m[39m [33m[2m(client)[22m[39m [2m[console.warn] [22mAn error occurred in the <DashboardScreen> component.

Consider adding an error boundary to your tree to customize error handling behavior.
Visit https://react.dev/link/error-boundaries to learn more about error boundaries.

[2m23:59:57[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] Failed to reload /src/App.jsx. This could be due to syntax errors or importing non-existent modules. (see errors above)
[2m00:00:13[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] Failed to reload /src/components/Sidebar.jsx. This could be due to syntax errors or importing non-existent modules. (see errors above)
[2m00:16:08[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] Failed to reload /src/App.jsx. This could be due to syntax errors or importing non-existent modules. (see errors above)
[2m00:17:00[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] Failed to reload /src/components/Sidebar.jsx. This could be due to syntax errors or importing non-existent modules. (see errors above)
